# bewusstheitsuebung

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml
.run/: classify.run.xml  main.run.xml  predict.run.xml  preprocessing.run.xml  propose.run.xml
src/: Dockerfile  app.py  main.py  pyproject.toml
src/eval/: predict.py  preprocessing.py
src/pipeline/: classify.py  consciousness_proposal.py  prompt.py  schema.py
src/pipelines/: schema.py
src/pipelines/classify_consciousness_level/: classify.py
src/pipelines/make_consciousness_proposal/: prompt.py  propose.py
