[project]
name = "bewusstheitsuebung"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.3.0",
]

[tool.black]
line-length = 120
target-version = ["py313"]
extend-exclude = """
(
  ^.venv/
  | ^build/
  | ^dist/
)
"""

