[project]
name = "bewusstheitsuebung"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.13"
dependencies = [
    "google-genai~=1.33.0",
    "langchain~=0.3.27",
    "langchain-google-genai~=2.1.10",
    "pydantic~=2.11.7",
]

[dependency-groups]
dev = [
    "black~=25.1.0",
    "pre-commit~=4.3.0",
]

[tool.black]
line-length = 120
target-version = ["py313"]
extend-exclude = """
(
  ^.venv/
  | ^build/
  | ^dist/
)
"""

